<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieFragment"
    android:background="@color/backgroundLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/extraLargeGap"
            android:layout_height="@dimen/extraLargeGap"
            android:layout_marginTop="@dimen/mediumGap"
            android:src="@drawable/starawars"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallGap"
            android:layout_marginTop="@dimen/smallGap"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/starWarsText"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumTextGap"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumGap"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/category"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumTextGap"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starWarsCalification"
            android:textColor="@color/calification"
            android:textSize="@dimen/largeTextGap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mediumGap"
            android:layout_marginTop="@dimen/mediumGap"
            android:layout_marginEnd="@dimen/mediumGap"
            android:padding="@dimen/smallGap"
            android:text="@string/descriptionStarWars"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>