<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.movie.NewMovieFragment"
    android:background="@color/backgroundLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/newMovie"
            android:textSize="@dimen/extraLargeTextGap"
            android:layout_marginTop="@dimen/mediumGap"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mediumGap"
            android:hint="@string/name"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"

            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/cardLayout"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CategoryTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mediumGap"
            android:hint="@string/categoryHint"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/nameTv"
            app:layout_constraintStart_toStartOf="@+id/nameTv"
            app:layout_constraintTop_toBottomOf="@+id/nameTv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/cardLayout" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mediumGap"
            android:hint="@string/descriptionHint"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/CategoryTv"
            app:layout_constraintStart_toStartOf="@+id/CategoryTv"
            app:layout_constraintTop_toBottomOf="@+id/CategoryTv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardLayout" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CalificationTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mediumGap"
            android:hint="@string/qualificationHint"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/DescriptionTv"
            app:layout_constraintStart_toStartOf="@+id/DescriptionTv"
            app:layout_constraintTop_toBottomOf="@+id/DescriptionTv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/qualification_edit_text"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:background="@color/cardLayout" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumGap"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/black"
            android:text="@string/submitButtonText"
            app:layout_constraintEnd_toEndOf="@+id/CalificationTv"
            app:layout_constraintStart_toStartOf="@+id/CalificationTv"
            app:layout_constraintTop_toBottomOf="@+id/CalificationTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>